@@ -437,7 +437,8 @@ assemble(void)
   state.obj.symbol_num = 0;
   state.obj.section_num = 0;
   /* finih the MACRO and WHILE definition */
-  state.mac_prev = state.mac_head = state.while_head = NULL;
+  state.mac_prev = NULL;
+  state.mac_head = state.while_head = NULL;
   state.while_depth = 0;
 
   /* Initial section */
